--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,6 @@ spring.h2.console.enabled=true
 spring.h2.console.settings.web-allow-others=true
 spring.h2.console.path=/h2-console
 
+server.port=${PORT:8080}
+
 jwt.secret=vetshop
